--- a/404.md
+++ b/404.md
@@ -3,6 +3,6 @@ layout: page
 title: 404 - Page not found
 ---
 
-# <center> Sorry! Page non trouvée! </center>
+# <center> Sorry! Page not found! </center>
 
 Sorry, we can't find that page that you're looking for. You can try take for a look by going [back to the homepage]({{ site.baseurl }}/) or search.
